# DRV8461-Custom-Driver

./: CMakeLists.txt  DRV8461_Register_Address_Locations.h  DRV8461_Register_Addresses.h  DRV8461_Register_CTRL.h  DRV8461_Register_Diag.h  DRV8461_Register_Fault  DRV8461_Registers.h
include/: DRV8461_Register_Address_Locations.h  DRV8461_Registers.h
src/: main.cpp
